[package]
name = "have_len"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Thomas-Mewily/have_len"
keywords = ["container", "is_empty", "is_not_empty", "len", "length"]
categories = ["rust-patterns", "algorithms"]
description = "Is the container empty ? (`is_empty()` and `is_not_empty()`)"

[dependencies]
